# stubs-with-mocks

./: CMakeLists.txt
include/internal/: internal.hpp
src/: external.cpp  internal.cpp  main.cpp
ut/: stubs.cpp  stubs.hpp  test_internal.cpp
